Now require Docbook xsl-ns version 1.78.1 build stylesheets
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@5935 7c7dc5f5-a22d-0410-a3af-b41755a11667